--- a/scss/componentes/_header.scss
+++ b/scss/componentes/_header.scss
@@ -38,6 +38,10 @@ header {
       margin: 6px;
     }
 
+    .navegador_botones_link:hover{
+      color: #0a58ca;
+   }
+
 /*
   Sobre escritura del AZUL del link de BS
  */
