--- a/scss/componentes/_main.scss
+++ b/scss/componentes/_main.scss
@@ -1,4 +1,4 @@
-.propiedades {
+    .propiedades {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -36,4 +36,69 @@
       height: 15em;
       width: 15em;
     }
-  }
+
+  
+
+    /*Estilos tarjetas*/
+    .card-img-top {
+    max-height: 250px;
+    overflow: hidden;
+    }
+
+    .card-title a:link {
+    font-size: 30px;
+    background-color: transparent;
+    color: #000000;
+    text-decoration: none;
+    }
+
+    .card-title a:hover {
+    color: red;
+    background-color: transparent;
+    text-decoration: underline;
+    }
+
+
+
+/**  Sobre escrituras del CARD **/
+
+    .card-body{
+    text-align: center;
+    color: black
+    }
+
+    .card-border{
+    border-color: transparent;
+    }
+
+
+    .css_grid_form_container{
+    padding-left: 3%;
+    padding-top: 3%;
+    }
+
+    .css_grid_form{
+    display: grid;
+    grid-template-rows: 15% 15% 15% 20% 15%;
+    grid-template-columns: 20% 50%;
+    column-gap: 5px;
+    row-gap: 15px;
+    }
+
+    .css_grid_form_text_area{
+    grid-column: 1 / 3;
+    }
+
+    .css_grid_form_buttons{
+    grid-column: 1 / 3;
+    }
+
+
+    justify-content-end {
+    justify-content: flex-end!important;
+    }
+
+
+
+
+}
