--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -1,285 +1,19 @@
-
+@import "var";
+@import "body";
+@import "header";
+@import "main";
+@import "footer";
  
  
  
  
- 
- 
- 
- .estudio{
-     text-align: center;
- 
- }
- 
- .separador100px{
-     height: 100px;
-     font-size: 30px;
- }
-   
- .separador300px{
-     height: 300px;
-     font-size: 20px;
- }
- 
- .formato_texto{
-     margin-top: 100px;
- }
- 
- .proyecto1{
-     margin-top: 50px;
- }
- 
- .proyecto2{
-     margin-top: 50px;
- }
- 
- .proyecto3{
-     margin-top: 50px;
- }
- 
- .proyecto4{
-     margin-top: 50px;
- }
- 
- .formulario{
-     margin-left: 40px;
-     margin-top: 50px;
- }
- 
- .centrado1{
-     margin-left: 100px;
-     margin-top: 5px;
- }
- 
- .centrado2{
-     margin-left: 100px;
- }
- 
- .centrado3{
-     margin-left: 100px;
- }
  
 
  
+
  
- /* Sticky footer styles
- -------------------------------------------------- */
- html {
-     position: relative;
-     min-height: 100%;
-   }
-   .footer {
-     position: absolute;
-     bottom: 0;
-     width: 100%;
-     /* Set the fixed height of the footer here */
-     height: 60px;
-     line-height: 60px; /* Vertically center the text there */
-     background-color: #557f7d;
-     color: #fefefe;
-   }
-   
-   
-   /* Custom page CSS
-   -------------------------------------------------- */
-   /* Not required for template or sticky footer method. */
-   
-   body > .container {
-     padding: 60px 15px 0;
-   }
-   
-   .footer > .container {
-     padding-right: 15px;
-     padding-left: 15px;
-   }
-   
-   code {
-     font-size: 80%;
-   }
- 
- 
-   /** ESTILOS DEL FOOTER **/
- 
- .footer_texto{
-     text-align: center;
-     color: white;
- }
- 
- 
- 
- /*Estilos tarjetas*/
- .card-img-top {
-     max-height: 250px;
-     overflow: hidden;
- }
- 
- .card-title a:link {
-     font-size: 30px;
-     background-color: transparent;
-     color: #000000;
-     text-decoration: none;
- }
- 
- .card-title a:hover {
-     color: red;
-     background-color: transparent;
-     text-decoration: underline;
- }
- 
- 
- 
- /**  Sobre escrituras del CARD **/
- 
- .card-body{
-     text-align: center;
-     color: black
- }
- 
- .card-border{
-     border-color: transparent;
- }
- 
- 
- .css_grid_form_container{
-     padding-left: 3%;
-     padding-top: 3%;
- }
- 
- .css_grid_form{
-     display: grid;
-     grid-template-rows: 15% 15% 15% 20% 15%;
-     grid-template-columns: 20% 50%;
-     column-gap: 5px;
-     row-gap: 15px;
- }
- 
- .css_grid_form_text_area{
-     grid-column: 1 / 3;
- }
- 
- .css_grid_form_buttons{
-     grid-column: 1 / 3;
- }
- 
- 
- justify-content-end {
-     justify-content: flex-end!important;
- }
- 
- .footer_contacto{
-     position: absolute;
-     bottom: 0;
-     width: 100%;
-     background-color: #557f7d;
-     color: #fefefe;
-     align-items:center;
- }
- .barra_contacto{
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     background-color: #557f7d;
-     height: 70px;
-     color: white;
-     text-align: center;
-     font-size: 10px;    
- }
- 
-   
-     .navbar {
-         display: flex;
-         justify-content: space-between; /* Alinea los elementos a los extremos (izquierda y derecha) */
-         align-items: center; /* Centra verticalmente los elementos en el navbar */
-         background-color: #557f7d;
-         color: #fff;
-         padding: 10px;
-         padding-top: 0,5rem;
-         padding-left: 0,5rem;
-         width: 100%;
-         height: 30px;
-         margin-left: 0%;
-         margin-right: 0%;
-        
-     }
-       
-     .navegador_botones  {
-         display: flex;
-         list-style: none;
-         margin: 0;
-         padding: 0;
          
-       }
-       
-       .navegador_botones li {
-         margin-left: 20px;
-       }
-       
-       .navegador_botones li:first-child {
-         margin-left: 0;
-       }
-       
-       .navegador_botones a{
-         color: #fff;
-         text-decoration: none;
-       }
-     
-     .css_grid_form_container{
-         padding-left: 3%;
-         padding-top: 3%;
-     }
-     
-     .css_grid_form{
-         display: grid;
-         grid-template-rows: 15% 15% 15% 20% 15%;
-         grid-template-columns: 20% 50%;
-         column-gap: 5px;
-         row-gap: 15px;
-        
-     }
-     
-     .css_grid_form_text_area{
-         grid-column: 1 / 3;
-     }
-     
-     .css_grid_form_buttons{
-         grid-column: 1 / 3;
-     }
-     
-     
      
     
-     .footer_contacto{
-         position: absolute;
-         bottom: 0;
-         width: 100%;
-         height: 30px;
-         line-height: 60px; 
-         background-color: #557f7d;
-         color: #fefefe;
-         align-items:center;
-     }
-     .barra_contacto{
-         background-color: #557f7d;
-         height: 30px;
-         color: white;
-         text-align: center;
-         padding: 30px; 
-         font-size: 10px;
-         margin-bottom: 0%
-         
-     }
-     .navegador_botones_link:hover{
-        color: #0a58ca;
-     }
  
      
-    /* Estilos para teléfonos móviles (ancho de pantalla menor o igual a 480px) */
-     @media only screen and (max-width: 480px) {
-        
-        .css_grid_form{
-        grid-template-columns: 1fr;
-        }
-        
-        
-}  
-  
