avances nesting_var_import

--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -1,8 +1,8 @@
-@import "var";
-@import "body";
-@import "header";
-@import "main";
-@import "footer";
+@import "componentes/var";
+@import "componentes/body";
+@import "componentes/header";
+@import "componentes/main";
+@import "componentes/footer";
  
  
  
