--- a/scss/componentes/_footer.scss
+++ b/scss/componentes/_footer.scss
@@ -1,115 +1,57 @@
+/** ESTILOS DEL FOOTER **/
 
- /*.footer {
-     background-color: black;
-     color: #fefefe;
-     position: fixed;
-     width: 100%;
-     bottom: 0;
-     left: 0;
- }*/
-
- .barra {
-    background-color: $fondo1;
-    height: 100px;
-    color: $fondo2;
-    text-align: center;
-    padding: 30px; 
-  }
- .letra{
-    font-size-adjust: 10px;
-  }
-
-
- 
- /* Sticky footer styles
- -------------------------------------------------- */
- html {
-    position: relative;
-    min-height: 100%;
-  }
-  .footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    /* Set the fixed height of the footer here */
-    height: 60px;
-    line-height: 60px; /* Vertically center the text there */
-    background-color: $fondo1;
-    color: $fondo2;
-  }
-  
-  
-  /* Custom page CSS
-  -------------------------------------------------- */
-  /* Not required for template or sticky footer method. */
-  
-  body > .container {
-    padding: 60px 15px 0;
-  }
-  
-  .footer > .container {
-    padding-right: 15px;
-    padding-left: 15px;
-  }
-  
-  code {
-    font-size: 80%;
-  }
-
-
-  /** ESTILOS DEL FOOTER **/
-
-    .footer_texto{
-    text-align: center;
-    color: $fondo2;
-   }
-
-
-
-
-
-    .footer_contacto{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    background-color: $fondo1;
-    color: $fondo2;
-    align-items:center;
-    }
-.barra_contacto{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: $fondo1;
-    height: 70px;
-    color: $fondo2;
-    text-align: center;
-    font-size: 10px;    
-   }
-
-  
-  
-    
-    
-    
-   
-    .footer_contacto{
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-        height: 30px;
-        line-height: 60px; 
-        background-color: $fondo1;
-        color: $fondo2;
-        align-items:center;
-    }
-    .barra_contacto{
-        background-color: $fondo1;
-        height: 30px;
-        color: $fondo2;
-        text-align: center;
-        padding: 30px; 
-        font-size: 10px;
-        margin-bottom: 0%
+.footer_texto {
+  text-align: center;
+  color: $fondo2;
 }
 
+.barra {
+  background-color: $fondo1;
+  height: 100px;
+  color: $fondo2;
+  text-align: center;
+  padding: 30px;
+}
+
+/* TODO- A renombrar como "letra-copyright*/
+.letra {
+  font-size-adjust: 10px;
+}
+
+
+/* Sticky footer styles
+ -------------------------------------------------- */
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  line-height: 60px;
+  /* Vertically center the text there */
+  background-color: $fondo1;
+  color: $fondo2;
+}
+
+
+/* Custom page CSS
+  -------------------------------------------------- */
+/* Not required for template or sticky footer method. */
+
+body>.container {
+  padding: 60px 15px 0;
+}
+
+.footer>.container {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+code {
+  font-size: 80%;
+}
