--- a/scss/componentes/_header.scss
+++ b/scss/componentes/_header.scss
@@ -1,84 +1,71 @@
 header {
-    background: $fondo1;
-    justify-content: space-between;
-  
-    .colorMenu {
-      background-color: $fondo1;
-    }
-  
-    .navegador_logo img {
-      display: flex;
-      text-align: left;
-      height: 30px;
-      width: 50px;
-    }
-  
-    .navegador_botones {
-      line-height: 90px;
-    }
-  
-    a {
-      color: $fondo2;
-      text-decoration: none;
-    }
-  
-    .img {
-      display: inline-block;
-    }
-  
-    .home_titulo {
-      text-align: center;
-      margin: 20px;
-      color: $fondo1;
-      font-size: 300%;
-    }
-  
-    .logo_organica {
-      width: 50px;
-      margin: 6px;
-    }
+  background: $fondo1;
+  justify-content: space-between;
 
-    .navegador_botones_link:hover{
-      color: #0a58ca;
-   }
+  a {
+    color: $fondo2;
+    text-decoration: none;
+  }
 
-/*
+  .img {
+    display: inline-block;
+  }
+
+  .home_titulo {
+    text-align: center;
+    margin: 20px;
+    color: $fondo1;
+    font-size: 300%;
+  }
+
+  .logo_organica {
+    width: 50px;
+    margin: 6px;
+  }
+
+  .navegador_botones_link:hover {
+    color: #0a58ca;
+  }
+
+  /*
   Sobre escritura del AZUL del link de BS
  */
-    .nav-link{
+  .nav-link {
     color: $fondo2;
-    }
+  }
 
 
-/** Estilos de la pagina: CONTACTO **/
- 
-.navbar {
+  /** Estilos de la pagina: CONTACTO **/
+
+  .navbar {
     display: flex;
-    justify-content: space-between; /* Alinea los elementos a los extremos (izquierda y derecha) */
-    align-items: center; /* Centra verticalmente los elementos en el navbar */
+    justify-content: space-between;
+    /* Alinea los elementos a los extremos (izquierda y derecha) */
+    align-items: center;
+    /* Centra verticalmente los elementos en el navbar */
     background-color: #557f7d;
     color: $fondo2;
     padding: 10px;
     height: 30px;
-}
-  
-.navegador_botones  {
+  }
+
+  .navegador_botones {
     display: flex;
     list-style: none;
     margin: 0;
     padding: 0;
-    
-    
+
+
   }
-  
+
   .navegador_botones li {
     margin-left: 20px;
   }
-  
+
   .navegador_botones li:first-child {
     margin-left: 0;
   }
-  
+
   .navegador_botones a {
     color: $fondo2;
     text-decoration: none;
@@ -86,10 +73,8 @@ header {
 
 
   justify-content-end {
-    justify-content: flex-end!important;
+    justify-content: flex-end !important;
   }
-
-
 
 
 }
