--- a/scss/componentes/_main.scss
+++ b/scss/componentes/_main.scss
@@ -1,3 +1,18 @@
+body {
+  animation: fadeInAnimation ease 2s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+
+  @keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+     }
+  }
+}
+
 .css_grid_form_container {
   padding-left: 3%;
   padding-top: 3%;
