--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,18 +1,24 @@
 * {
-  font-family: Raleway; }
+  font-family: Raleway;
+}
 
 .container {
-  /** Sobre escrituras del CARD **/ }
-  .container .card-body {
-    text-align: center;
-    color: black; }
-  .container .card-border {
-    border-color: transparent;
-    /** Animaciones de las CARD **/ }
-    .container .card-border img {
-      transition: all .2s ease-in-out; }
-    .container .card-border img:hover {
-      transform: scale(1.1); }
+  /** Sobre escrituras del CARD **/
+}
+.container .card-body {
+  text-align: center;
+  color: black;
+}
+.container .card-border {
+  border-color: transparent;
+  /** Animaciones de las CARD **/
+}
+.container .card-border img {
+  transition: all 0.2s ease-in-out;
+}
+.container .card-border img:hover {
+  transform: scale(1.1);
+}
 
 header {
   background: #557f7d;
@@ -20,69 +26,100 @@ header {
   /* Boostrap sobre-escritura
     evitamos un espacio extra derecha */
   /*
-  Sobre escritura del AZUL del link de BS
- */ }
-  header .row {
-    margin: 0px; }
-  header a {
-    color: #fff;
-    text-decoration: none; }
-  header .img {
-    display: inline-block; }
-  header .home_titulo {
-    text-align: center;
-    margin: 20px;
-    color: #557f7d;
-    font-size: 300%; }
-  header .logo_organica {
-    width: 50px;
-    margin: 6px; }
-  header .navegador_botones_link:hover {
-    color: #0a58ca; }
-  header .nav-link {
-    color: #fff; }
-  header justify-content-end {
-    justify-content: flex-end !important; }
+   Sobre escritura del AZUL del link de BS
+  */
+}
+header .row {
+  margin: 0px;
+}
+header a {
+  color: #fff;
+  text-decoration: none;
+}
+header .img {
+  display: inline-block;
+}
+header .home_titulo {
+  text-align: center;
+  margin: 20px;
+  color: #557f7d;
+  font-size: 300%;
+}
+header .logo_organica {
+  width: 50px;
+  margin: 6px;
+}
+header .navegador_botones_link:hover {
+  color: #0a58ca;
+}
+header .nav-link {
+  color: #fff;
+}
+header justify-content-end {
+  justify-content: flex-end !important;
+}
 
 body {
-  animation: fadeInAnimation ease 2s;
-  animation-iteration-count: 1;
-  animation-fill-mode: forwards; }
-
+  -webkit-animation: fadeInAnimation ease 2s;
+          animation: fadeInAnimation ease 2s;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+@-webkit-keyframes fadeInAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 @keyframes fadeInAnimation {
   0% {
-    opacity: 0; }
+    opacity: 0;
+  }
   100% {
-    opacity: 1; } }
+    opacity: 1;
+  }
+}
 
 .css_grid_form_container {
   padding-left: 3%;
-  padding-top: 3%; }
-  .css_grid_form_container .css_grid_form {
-    display: grid;
-    grid-template-rows: 15% 15% 15% 20% 15%;
-    grid-template-columns: 20% 50%;
-    column-gap: 5px;
-    row-gap: 15px; }
-  .css_grid_form_container .css_grid_form_text_area {
-    grid-column: 1 / 3; }
-  .css_grid_form_container .css_grid_form_buttons {
-    grid-column: 1 / 3; }
+  padding-top: 3%;
+}
+.css_grid_form_container .css_grid_form {
+  display: grid;
+  grid-template-rows: 15% 15% 15% 20% 15%;
+  grid-template-columns: 20% 50%;
+  -moz-column-gap: 5px;
+       column-gap: 5px;
+  row-gap: 15px;
+}
+.css_grid_form_container .css_grid_form_text_area {
+  grid-column: 1/3;
+}
+.css_grid_form_container .css_grid_form_buttons {
+  grid-column: 1/3;
+}
 
 /** ESTILOS DEL FOOTER **/
 .footer_texto {
   text-align: center;
-  color: #fff; }
+  color: #fff;
+}
 
 /* TODO- A renombrar como "letra-copyright*/
 .letra {
-  font-size-adjust: 10px; }
+  font-size-adjust: 10px;
+}
 
 /* Sticky footer styles
  -------------------------------------------------- */
 html {
   position: relative;
-  min-height: 100%; }
+  min-height: 100%;
+}
 
 .footer {
   position: absolute;
@@ -93,17 +130,21 @@ html {
   line-height: 60px;
   /* Vertically center the text there */
   background-color: #557f7d;
-  color: #fff; }
+  color: #fff;
+}
 
 /* Custom page CSS
   -------------------------------------------------- */
 /* Not required for template or sticky footer method. */
 body > .container {
-  padding: 60px 15px 0; }
+  padding: 60px 15px 0;
+}
 
 .footer > .container {
   padding-right: 15px;
-  padding-left: 15px; }
+  padding-left: 15px;
+}
 
 code {
-  font-size: 80%; }
+  font-size: 80%;
+}/*# sourceMappingURL=estilo.css.map */
