--- a/scss/componentes/_main.scss
+++ b/scss/componentes/_main.scss
@@ -2,21 +2,21 @@ body {
   animation: fadeInAnimation ease 2s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
-
+  
   @keyframes fadeInAnimation {
     0% {
         opacity: 0;
     }
     100% {
         opacity: 1;
-     }
+    }
   }
 }
 
-.css_grid_form_container {
+  .css_grid_form_container {
   padding-left: 3%;
   padding-top: 3%;
-
+  }
   .css_grid_form {
     display: grid;
     grid-template-rows: 15% 15% 15% 20% 15%;
@@ -32,4 +32,7 @@ body {
   .css_grid_form_buttons {
     grid-column: 1 / 3;
   }
-}
+
+  .container_bajopantalla{
+    min-height: 90vh;
+  }
