agrego foto presentación

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -106,6 +106,10 @@ body {
   margin-left: 315px;
 }
 
+.arquitectas {
+  margin-bottom: 35px;
+}
+
 /** ESTILOS DEL FOOTER **/
 .footer_texto {
   text-align: center;
