--- a/css/estilo.css
+++ b/css/estilo.css
@@ -155,6 +155,10 @@ body {
   font-weight: bold;
 }
 
+.project-description {
+  font-size: 16px;
+}
+
 /** ESTILOS DEL FOOTER **/
 .footer_texto {
   text-align: center;
