--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   font-family: Raleway;
 }
@@ -136,7 +137,6 @@ body {
 
 .arquitectas {
   margin-bottom: 35px;
-  width: 100px;
 }
 
 .contact-info {
@@ -221,6 +221,16 @@ code {
 .redes {
   display: flex;
   justify-content: end;
+}
+
+/* Estilos para teléfonos móviles (ancho de pantalla menor o igual a 480px) */
+@media only screen and (max-width: 480px) {
+  .arquitectas img {
+    width: 100%;
+  }
+  .css_grid_form {
+    grid-template-columns: 1fr;
+  }
 } 
 
 /*# sourceMappingURL=estilo.css.map */
