--- a/scss/componentes/_mediaqueries.scss
+++ b/scss/componentes/_mediaqueries.scss
@@ -1,6 +1,12 @@
 /* Estilos para teléfonos móviles (ancho de pantalla menor o igual a 480px) */
 @media only screen and (max-width: 480px) {
 
+    .arquitectas{
+        img{
+            width: 100%
+            }
+        }
+
     .css_grid_form {
         grid-template-columns: 1fr;
     }
