--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -3,7 +3,7 @@
 @import "componentes/header";
 @import "componentes/main";
 @import "componentes/footer";
- 
+@import "componentes/mediaqueries"; 
  
  
  
