--- a/css/estilo.css
+++ b/css/estilo.css
@@ -77,14 +77,17 @@ body {
 .css_grid_form_container {
   padding-left: 3%;
   padding-top: 3%;
+  display: flex;
+  justify-content: center;
 }
 
 .css_grid_form {
   display: grid;
   grid-template-rows: 15% 15% 15% 20% 15%;
-  grid-template-columns: 20% 50%;
+  grid-template-columns: 1fr 5fr;
   column-gap: 5px;
   row-gap: 15px;
+  width: 60%;
 }
 
 .css_grid_form_text_area {
@@ -204,6 +207,16 @@ code {
   }
   .css_grid_form {
     grid-template-columns: 1fr;
+  }
+  .mapcentro {
+    justify-content: center;
+    flex-direction: column;
+  }
+  .mapcentro div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 10px;
   }
 }
 
