--- a/scss/componentes/_main.scss
+++ b/scss/componentes/_main.scss
@@ -16,13 +16,17 @@ body {
   .css_grid_form_container {
   padding-left: 3%;
   padding-top: 3%;
+  display: flex;
+  justify-content: center;
   }
+  
   .css_grid_form {
     display: grid;
     grid-template-rows: 15% 15% 15% 20% 15%;
-    grid-template-columns: 20% 50%;
+    grid-template-columns: 1fr 5fr; 
     column-gap: 5px;
     row-gap: 15px;
+    width: 60%;
   }
 
   .css_grid_form_text_area {
@@ -72,7 +76,6 @@ body {
     font-size: 16px;
     padding-top: 15px;
 }
-
 
 
 
